# camus

./: .gitignore  CMakeLists.txt  README.md  build_commands.txt  tasks.md  test_loadbalancer_models.yml
.camus/: models.yml
config/: models.yml
docs/: AmodifyCommand.md  Testing.md
include/Camus/: AmodifyConfig.hpp  BackupManager.hpp  CliParser.hpp  ConfigParser.hpp  ContextBuilder.hpp  Core.hpp  DiffGenerator.hpp  EnsembleStrategy.hpp  IgnorePattern.hpp  InteractiveConfirmation.hpp  LlamaCppInteraction.hpp  LlmInteraction.hpp  LoadBalancer.hpp  Logger.hpp  ModelCapabilities.hpp  ModelOrchestrator.hpp  ModelPool.hpp  ModelRegistry.hpp  ModelSelector.hpp  MultiFileDiff.hpp  OllamaInteraction.hpp  ParallelStrategy.hpp  ProjectScanner.hpp  ResponseParser.hpp  SafetyChecker.hpp  SequentialStrategy.hpp  SingleModelStrategy.hpp  SysInteraction.hpp  TaskClassifier.hpp
management/: Camus - Multi-Model Pipeline Plan.md  Camus - Ollama Integration Plan.txt  Camus - Project-Level Context Implementation Plan.txt  Camus - llama.cpp Integration Log & Future Work.txt  Camus CLI - Core Feature Implementation Plan.md  Camus CLI - Issue & Resolution Log.txt  Camus CLI - Project Development Log  Camus Cli - Issue & log resolution v2.md  Navigating the Landscape of Local AI Developer Assistants.txt  Recommanded_llms.md  Refined-Multi-Model-Pipeline-Plan.md  Refined-Project-Context-Implementation-Plan.md  Specification_v0.txt  initial_roadmap_preview.md  tasks.md  web_search_results.md
src/: main.cpp
src/Camus/: AmodifyConfig.cpp  BackupManager.cpp  CliParser.cpp  ConfigParser.cpp  ContextBuilder.cpp  Core.cpp  DiffGenerator.cpp  EnsembleStrategy.cpp  IgnorePattern.cpp  InteractiveConfirmation.cpp  LlamaCppInteraction.cpp  LlmInteraction.cpp  LoadBalancer.cpp  Logger.cpp  ModelCapabilities.cpp  ModelOrchestrator.cpp  ModelPool.cpp  ModelRegistry.cpp  ModelSelector.cpp  MultiFileDiff.cpp  OllamaInteraction.cpp  ParallelStrategy.cpp  ProjectScanner.cpp  ResponseParser.cpp  SafetyChecker.cpp  SequentialStrategy.cpp  SingleModelStrategy.cpp  SysInteraction.cpp  TaskClassifier.cpp
tasks/: 1.md  2.md  3.md
tasks/claude_logs/: 0  0.txt
tests/: CMakeLists.txt  ContextBuilderTest.cpp  EnsembleStrategyTest.cpp  IntegrationTest.cpp  LoadBalancerTest.cpp  ModelAbstractionTest.cpp  ModelOrchestratorTest.cpp  ModelRegistryTest.cpp  ModelSelectorTest.cpp  ProjectScannerTest.cpp  ResponseParserTest.cpp  SafetyCheckerTest.cpp  SingleModelStrategyTest.cpp  TaskClassifierTest.cpp  TestRunner.cpp  test_classification_rules.yml
